# eaglescope-omero-endpoint

./: Dockerfile  README.md  pyproject.toml  requirements.txt
requirements/: requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements-types.txt
src/omero_scoper/: __main__.py
src/omero_scoper/scopers/: OmeroSlideScoper.py  OmeroSubjectScoper.py  __init__.py
